add hls